--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "expo": "^18.0.4",
     "react": "16.0.0-alpha.12",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-18.0.1.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-18.0.1.tar.gz",
+    "react-native-elements": "^0.13.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
