--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
+    "axios": "^0.16.2",
     "expo": "^18.0.4",
     "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.12",
     "react-native": "https://github.com/expo/react-native/archive/sdk-18.0.1.tar.gz",
-    "react-native-elements": "^0.13.0"
+    "react-native-elements": "^0.13.0",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.1",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
